[package]
name = "refractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive", "cargo"] }
derive = "1.0.0"
isocountry = "0.3.2"
reqwest = { version = "0.11.12", features = ["serde_json", "json"] }
serde = { vesrion = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
