[package]
name = "refractor"
version = "0.0.1-a.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.22", features = ["derive", "cargo"] }
derive = "1.0.0"
dirs = "4.0.0"
env_logger = "0.9.3"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["serde_json", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tabwriter = "1.2.1"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
